Added ClosedXML via nuget

--- a/SeShellTest/SeShell.Test.csproj
+++ b/SeShellTest/SeShell.Test.csproj
@@ -39,12 +39,13 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Castle.Core.3.3.1\lib\net45\Castle.Core.dll</HintPath>
     </Reference>
-    <Reference Include="ClosedXML">
-      <HintPath>..\Lib\ClosedXML_v0.69.1.0\ClosedXML.dll</HintPath>
+    <Reference Include="ClosedXML, Version=0.75.0.0, Culture=neutral, PublicKeyToken=fd1eb21b62ae805b, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ClosedXML.0.75.0\lib\net40-client\ClosedXML.dll</HintPath>
     </Reference>
     <Reference Include="DocumentFormat.OpenXml, Version=2.5.5631.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Lib\ClosedXML\DocumentFormat.OpenXml.dll</HintPath>
+      <Private>True</Private>
+      <HintPath>..\packages\DocumentFormat.OpenXml.2.5\lib\DocumentFormat.OpenXml.dll</HintPath>
     </Reference>
     <Reference Include="nunit-console-runner">
       <HintPath>..\Lib\NUnit 2.6.3\bin\lib\nunit-console-runner.dll</HintPath>
