--- a/SeShellTest/Core/Settings/Property.config
+++ b/SeShellTest/Core/Settings/Property.config
@@ -2,7 +2,7 @@
 <appSettings>
 	<add key="BaseUrl" value="http://localhost/CaseStudyWebApp/"/>
 	<add key="MeanThreadSleepTime" value="9500"/>
-	<add key="WebBrowsers" value="FireFox"/>
+	<add key="WebBrowsers" value="chrome"/>
 	<add key="ErrorImagePath" value="ScreenShots"/>
 	<add key="TestDataDirectory" value="SeShellTest\TestData\Files"/>
 	<add key="DbConnectionString" value=""/>
